# VidViewer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml  justfile
docs/: README.md
docs/agents/: adding-a-job-kind.md  adding-a-page.md  changing-the-schema.md  debugging.md
docs/design/: 01-overview.md  02-architecture.md  03-data-model.md  04-scanner.md  05-jobs-and-workers.md  06-thumbnails-and-previews.md  07-collections.md  08-mpv-integration.md  09-http-api.md  10-ui.md  11-utf8-and-i18n.md  12-configuration.md  14-migrations.md
docs/plan/: deferred.md  mvp-build-order.md
migrations/: 0001_initial.sql  0002_audio_support.sql  0002_jobs_unique_outstanding.sql  README.md
src/: cli.rs  clock.rs  config.rs  db.rs  fs_browse.rs  http.rs  ids.rs  lib.rs  logging.rs  main.rs  state.rs  test_support.rs  ui_state.rs
src/collections/: mod.rs  mutations.rs  reads.rs  test_helpers.rs  types.rs
src/db/: mod.rs  row.rs
src/directories/: commands.rs  mod.rs  tests.rs
src/history/: mod.rs
src/http/: api.rs  debug.rs  error.rs  mod.rs  pages.rs  routes.rs  static_assets.rs
src/http/api/: collections.rs  directories.rs  fs.rs  history.rs  mod.rs  scan.rs  test_helpers.rs  (+1 more)
src/jobs/: counts.rs  mod.rs  preview_plan.rs  reconcile.rs  registry.rs  test_helpers.rs  tests.rs  watchdog.rs  worker.rs
src/player/: mod.rs  session.rs
src/scanner/: dry_run.rs  mod.rs  mutations.rs  sniff.rs  tests.rs  verify.rs  walk.rs
src/util/: mod.rs  path.rs  url.rs
src/video_tool/: ffmpeg.rs  ffprobe.rs  mock.rs  mod.rs  tests.rs
src/videos/: mod.rs
static/: app.css  collection.js  history.js  home.js  hover_scrub.js  settings.js  video_detail.js
templates/: _collection_card.html  base.html  collection.html  history.html  home.html  settings.html  video_detail.html
tests/: cancellation.rs  worker_pipeline.rs
(+6 files in other folders)
